--- a/css/responsive.css
+++ b/css/responsive.css
@@ -192,8 +192,9 @@
     .faberklajsjdjjl_img > a > img {
       width: 114px;
       position: absolute;
-      top: 47px;
+      top: unset;
       left: 14px;
+      margin-top: 7px;
     }
   }
   @media only screen and (max-width: 868px) and (min-width: 601px) {
