--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,6 +3,9 @@
       font-size: 30px;
       width: 100%;
     }
+    .faberklajsjdjjl {
+      padding: 14px 0px;
+    }
     .customer-support-footer {
       display: flex;
       align-items: center;
